[gd_scene load_steps=14 format=2]

[ext_resource path="res://Island/UI/default_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Island/Assets/UI/道具栏的右箭头.png" type="Texture" id=2]
[ext_resource path="res://Island/Assets/UI/道具栏的左箭头不可用.png" type="Texture" id=3]
[ext_resource path="res://Island/Assets/UI/道具栏的左箭头.png" type="Texture" id=4]
[ext_resource path="res://Island/Assets/UI/道具指示文字背景黑块.png" type="Texture" id=5]
[ext_resource path="res://Island/Assets/UI/道具栏的右箭头不可用.png" type="Texture" id=6]
[ext_resource path="res://Island/Assets/UI/道具栏.png" type="Texture" id=7]
[ext_resource path="res://Island/Assets/UI/道具栏的左箭头按下.png" type="Texture" id=8]
[ext_resource path="res://Island/Assets/UI/道具栏的右箭头按下.png" type="Texture" id=9]
[ext_resource path="res://Island/Assets/UI/抓着道具的手.png" type="Texture" id=10]
[ext_resource path="res://Island/Assets/H2/key_prop.png" type="Texture" id=11]
[ext_resource path="res://Island/UI/inventory.gd" type="Script" id=12]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 364, 122 )
margin_left = 78.0
margin_right = 63.0
margin_top = 32.0
margin_bottom = 32.0

[node name="Inventory" type="VBoxContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -16.0
margin_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource( 12 )

[node name="Description" type="Label" parent="."]
margin_right = 354.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "道具描述"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="Description"]
wait_time = 1.5
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 124.0
margin_right = 354.0
margin_bottom = 334.0
size_flags_horizontal = 8

[node name="Prev" type="TextureButton" parent="HBoxContainer"]
margin_top = 59.0
margin_right = 66.0
margin_bottom = 151.0
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )
texture_disabled = ExtResource( 3 )

[node name="Use" type="TextureButton" parent="HBoxContainer"]
margin_left = 70.0
margin_right = 284.0
margin_bottom = 210.0
texture_normal = ExtResource( 7 )

[node name="Prop" type="Sprite" parent="HBoxContainer/Use"]
position = Vector2( 114, 106 )
z_index = 1
texture = ExtResource( 11 )

[node name="Hand" type="Sprite" parent="HBoxContainer/Use"]
position = Vector2( 156, 151 )
z_index = 1
texture = ExtResource( 10 )

[node name="Next" type="TextureButton" parent="HBoxContainer"]
margin_left = 288.0
margin_top = 59.0
margin_right = 354.0
margin_bottom = 151.0
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 9 )
texture_disabled = ExtResource( 6 )

[connection signal="timeout" from="Description/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="HBoxContainer/Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="HBoxContainer/Use" to="." method="_on_Use_pressed"]
[connection signal="pressed" from="HBoxContainer/Next" to="." method="_on_Next_pressed"]
